# deephold-app

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/src/deephold_api/: __init__.py  analytics.py  auth.py  config.py  create_admin.py  db_session.py  deps.py  main.py  models.py  schemas.py
api/src/deephold_api/routers/: auth.py  compare.py  dashboard.py  series.py
api/tests/: conftest.py  test_auth.py  test_health.py  test_series.py
caddy/: Caddyfile
web/: Dockerfile  package.json  tailwind.config.ts
web/app/: layout.tsx  page.tsx
web/app/compare/: page.tsx
web/app/correlation/: page.tsx
web/app/login/: page.tsx
web/app/series/: page.tsx
web/app/series/[id]/: page.tsx
web/components/: providers.tsx
web/components/charts/: CandleChart.tsx  LineChart.tsx  MiniSpark.tsx
web/components/nav/: TopNav.tsx  UserMenu.tsx
web/components/series/: FilterBar.tsx  SeriesSearch.tsx  SeriesTable.tsx  StatsPanel.tsx
web/components/ui/: badge.tsx  card.tsx  table.tsx
web/lib/: api.ts  auth.tsx  types.ts
web/public/: manifest.webmanifest
